APPLICATIONS/springboot-kubernates-elastic-fluitentbit-kibina/kubernates/kibana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: logging
  labels:
    k8s-app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: kibana
  template:
    metadata:
      labels:
        k8s-app: kibana
    spec:
      containers:
        - name: kibana
          image: kibana:7.3.2
          ports:
            - containerPort: 5601
              name: ui
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: logging
  labels:
    k8s-app: kibana
    kubernetes.io/name: "Kibana"
spec:
  type: LoadBalancer
  ports:
    - port: 5601
      protocol: TCP
      targetPort: 5601
  selector:
    k8s-app: kibana
