APPLICATIONS/springboot-kubernates-elastic-fluitentbit-kibina/kubernates/springboot-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-web-rest
  namespace: default
  labels:
    app: springboot-web-rest
spec:
  replicas: 3
  selector:
    matchLabels:
      app: springboot-web-rest
      tier: backend
  template:
    metadata:
      labels:
        app: springboot-web-rest
        tier: backend
    spec:
      containers:
      - image: adarshkumarsingh83/springboot-web-rest
        name: springboot-web-rest
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: espark-vol
            mountPath: /var/log/containers/
      volumes:
        - name: espark-vol
          emptyDir: {} 
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: springboot-web-rest
  namespace: default
  labels:
    app: springboot-web-rest
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: springboot-web-rest
  type: LoadBalancer
