APPLICATIONS/springboot-kubernates-elastic-fluitentbit-kibina/kubernates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
spec:
  rules:
    - host: espark.com
      http:
        paths:
          - path: /api/message
            pathType: Prefix
            backend:
              service:
                name: springboot-web-rest
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springboot-web-rest
                port:
                  number: 8080
    - host: localhost
      http:
        paths:
          - path: /api/message
            pathType: Prefix
            backend:
              service:
                name: springboot-web-rest
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springboot-web-rest
                port:
                  number: 8080
